[project]
name = "dynamo"
version = "0.2.0"
description = "Bot for personal use"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.13"
dependencies = [
    "apsw>=3.47.0.0",
    "base2048>=0.1.3",
    "discord-py[speed]",
    "dynaconf>=3.2.6",
    "dynamo-utils",
    "msgspec",
    "numpy>=2.1.3",
    "pillow>=11.0.0",
    "platformdirs>=4.3.6",
    "toml>=0.10.2",
    "truststore>=0.10.0",
    "xxhash>=3.5.0",
]

[tool.uv.sources]
discord-py = { git = "https://github.com/mikeshardmind/discord.py.git", rev = "89ac64f" }
msgspec = { git = "https://github.com/jcrist/msgspec", rev = "main" }
dynamo-utils = { git = "https://github.com/trumully/dynamo-utils" }

[dependency-groups]
dev = [
    "hypothesis>=6.119.3",
    "mypy>=1.13.0",
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pytest-xdist[psutil]>=3.6.1",
    "ruff>=0.7.4",
]

[project.scripts]
dynamo = "dynamo.runner:main"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
